--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -17,3 +17,62 @@
 
 </mat-card>
 
+<mat-card *ngIf="userForm2">
+  <form [formGroup]="userForm2" >
+
+    <mat-form-field class="input-container">
+      <input matInput formControlName="firstName" disabled placeholder="prénom">
+    </mat-form-field>
+    <mat-form-field class="input-container">
+      <input matInput formControlName="lastName" disabled placeholder="nom" >
+    </mat-form-field>
+
+    <mat-form-field class="input-container">
+      <input matInput formControlName="email"  placeholder="email" >
+    </mat-form-field>
+
+    <label id="example-radio-group-label">      Votre maison-date-elle de plus de 15 ans?
+    </label>
+    <mat-radio-group
+      aria-labelledby="example-radio-group-label"
+      class="example-radio-group"
+      formControlName="question1" >
+      <mat-radio-button class="example-radio-button"  [value]="true">Oui</mat-radio-button>
+      <mat-radio-button class="example-radio-button"  [value]="false">Non</mat-radio-button>
+    </mat-radio-group>
+
+    <label id="example-radio-group-label">     Vous êtes locataire ou propriétaire ?
+    </label>
+    <mat-radio-group
+      aria-labelledby="example-radio-group-label"
+      class="example-radio-group"
+      formControlName="question2" >
+      <mat-radio-button class="example-radio-button"  [value]="true">propriétaire</mat-radio-button>
+      <mat-radio-button class="example-radio-button"  [value]="false">locataire</mat-radio-button>
+    </mat-radio-group>
+
+    <label id="example-radio-group-label">      Avez-vous bien une chaudière à gaz murale ?
+    </label>
+    <mat-radio-group
+      aria-labelledby="example-radio-group-label"
+      class="example-radio-group"
+      formControlName="question3" >
+      <mat-radio-button class="example-radio-button"  [value]="true">Oui</mat-radio-button>
+      <mat-radio-button class="example-radio-button"  [value]="false">Non</mat-radio-button>
+    </mat-radio-group>
+    <div [class.hidden]="!userForm2.valid" class="card-container">
+      <div id="card-element" class="MyCardElement">
+        <!-- Elements will create input elements here -->
+      </div>
+
+      <!-- We'll put the error messages in this element -->
+      <div id="card-errors" role="alert"></div>
+
+      <button (click)="submitPayement()" mat-raised-button color="primary">Pay</button>
+    </div>
+
+
+  </form>
+
+
+</mat-card>
