--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<mat-toolbar>
+  <span routerLink="/">LSF  Energie</span>
+  <span class="example-spacer"></span>
+  <button mat-button [matMenuTriggerFor]="menu">Login</button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="openDialog('admin')">admin</button>
+    <button mat-menu-item (click)="openDialog('user')">user</button>
+  </mat-menu>
+</mat-toolbar>
 
 
 <router-outlet></router-outlet>
